--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-fastapi==0.110.0
-uvicorn==0.27.1
-pydantic==2.6.1
-
-pandas==2.2.1
-numpy==1.26.4
-
-scikit-learn==1.4.1.post1
-xgboost==2.0.3
-joblib==1.3.2
-requests
+fastapi
+uvicorn
+pandas
+numpy
+scikit-learn
+joblib
+xgboost
