--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ __pycache__/
 # --------------------
 # Model / Artifacts
 # --------------------
-*.pkl
+# *.pkl
 *.joblib
 
 # --------------------
