--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,16 @@ __pycache__/
 # --------------------
 # Model / Artifacts
 # --------------------
-# *.pkl
+*.pkl
 *.joblib
 
 # --------------------
 # VS Code
 # --------------------
 .vscode/
+
+# --------------------
+# Ml flow
+# --------------------
+mlartifacts/
+mlruns/
