--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,4 @@
-# --------------------
-# Virtual Environment
-# --------------------
+
+# To igonore
 env/
-venv/
-*.venv
-
-# --------------------
-# Python
-# --------------------
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.pyc
-
-# --------------------
-# Jupyter / IPython
-# --------------------
-.ipynb_checkpoints/
-*.ipynb
-
-# --------------------
-# Logs and temp files
-# --------------------
-*.log
-*.out
-*.tmp
-*.bak
-
-# --------------------
-# Data files (optional, if not storing in repo)
-# --------------------
-*.xlsx
-*.json
-
-# --------------------
-# Model / Artifacts
-# --------------------
 *.pkl
-*.joblib
-
-# --------------------
-# VS Code
-# --------------------
-.vscode/
-
-# --------------------
-# Ml flow
-# --------------------
-mlartifacts/
-mlruns/
